@@ -1,3 +1,5 @@
+2006/8/4 -- released version 20060804_trunk
+
 2006/8/3 -- released version 20060803_trunk
 
 2006/8/2 -- released version 20060802_trunk
